--- a/shared/style.css
+++ b/shared/style.css
@@ -1,5 +1,5 @@
 body {
-    background: url('assets/dragon-background.png') center center / cover no-repeat, #222;
+    background: url('../assets/dragon-background.png') center center / cover no-repeat, #222;
     color: #fff;
     font-family: Arial, sans-serif;
     text-align: center;
